# PasswordProtectedHttpServer

./: README.md  pyproject.toml
example_server/: config.json
example_server/server/: index.css  index.html  login.html
example_server/server/page1/: page1.css  page1.html
example_server/server/page2/: page2.html
main/PasswordProtectedHttpServer/: __init__.py  __main__.py
main/PasswordProtectedHttpServer/src/: fallback_login.html  server.py
