[tool.poetry]
name = "PasswordProtectedHttpServer"
version = "1.1.0"
description = "CLI tool for running basic static websites with password protection"
authors = ["marcelm9 <marcel.menzel09@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "PasswordProtectedHttpServer", from = "main" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
